--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                 var e = a % b;
                 var f = b - a;
                 var g = a / b;
+                console.log(typeof a)
+
+                const message = "great";
+                let greeting = "HI";
+                if (true){
+                    let greeting = "Ok";
+                }
+                console.log(greeting);
 
                 document.write("<p> a + b = "+c+"</p>");
                 document.write("<p> a * b = "+d+"</p>");
@@ -71,7 +79,7 @@
 
             <p> Write a table to the page </p>
             <script>
-                document.write("<table border=\"1\"> ");
+                //document.write("<table border=\"1\"> ");
             </script>
 
         </div>
@@ -80,6 +88,11 @@
             <h1>Window and Document Object </h1>
             <p> Try alert, open, location, url </p>
             <script>
+               // window.alert("pop up alert windows");
+               // alert("another alert");
+               // window.location.assign("https://www.google.com");
+                alert(document.lastModified);
+
 
             </script>
 
@@ -99,9 +112,20 @@
             <p id="p1"> Paragraph Number One </p>
             <p id="p2"> Paragraph Number two </p>
             <p id="p3"> Paragraph Number three </p>
-            <p>Please write JavaScript code to change the content of each paragraph.​
-            <p>
+            <p>Please write JavaScript code to change the content of each paragraph.​ </p>
+            <script>
+                // change the first paragraph
+                const pOne = document.getElementById("p1");
+                pOne.innerHTML = "<b> Bold elements</b>";
 
+                // other getElements
+                const pTwo = document.getElementsByTagName;
+                console.log(pTwo);
+            
+                const pThree = document.getElementById("p3");
+                pThree.innerHTML = "changing";
+
+            </script>
 
         </div>
 
@@ -110,7 +134,19 @@
             <p> Please enter your numbers </p>
             <script>
                 function calculate() {
+                    // get the value from the form and add them up
+                    const input1 = document.getElementsByName('num1')[0];
+                    console.log("get the first input " + input1.value);
 
+                    const input2 = document.getElementsByName('num2')[0];
+                    console.log("get the second input " + input2.value);
+
+                    var a = parseFloat(input1.value);
+                    var b = parseFloat(input2.value);
+                    var c = a + b;
+
+                    const resultL = document.getElementById("result");
+                    resultL.textContent = " " + c;
 
                 }
             </script>
@@ -140,6 +176,15 @@
                     </label>
                 </p>
             </form>
+            <script>
+                // event handler
+                function welcome(){
+                    alert("Thank you!");
+                }
+                // Binding -- refister the event
+                const nameE = document.getElementById('cName');
+                nameE.addEventListener('blur', welcome);
+            </script>
 
         </div>
 
